--- a/portfolio.html
+++ b/portfolio.html
@@ -37,22 +37,26 @@
                                     <p>Sample Text</p>
                                 </div>
                             </a>
-                            <a href="" class="box"><img class="portPic" src="assets/images/200x200(1).jpg">
+                            <a href="" class="box">
+                                <img class="portPic" src="assets/images/200x200(1).jpg">
                                 <div class="picBanner">
                                     <p>Sample Text</p>
                                 </div>
                             </a>
-                            <a href="" class="box"><img class="portPic" src="assets/images/200x200(2).jpg">
+                            <a href="" class="box">
+                                <img class="portPic" src="assets/images/200x200(2).jpg">
                                 <div class="picBanner">
                                     <p>Sample Text</p>
                                 </div>
                             </a>
-                            <a href="" class="box"><img class="portPic" src="assets/images/200x200(3).jpg">
+                            <a href="" class="box">
+                                <img class="portPic" src="assets/images/200x200(3).jpg">
                                 <div class="picBanner">
                                     <p>Sample Text</p>
                                 </div>
                             </a>
-                            <a href="" class="box"><img class="portPic" src="assets/images/200x200(4).jpg">
+                            <a href="" class="box">
+                                <img class="portPic" src="assets/images/200x200(4).jpg">
                                 <div class="picBanner">
                                     <p>Sample Text</p>
                                 </div>
