adding links, thumbnails in portfolio to word guess, crystal collector games

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,16 +31,16 @@
                     <hr>
                     <div class="portContainer">
                         <div class="portGrid">
-                            <a href="" class="box">
-                                <img class="portPic" src="assets/images/200x200.jpg">
+                            <a href="https://bhoff5.github.io/Word-Guess-Game/" class="box">
+                                <img class="portPic" src="assets/images/wordGuessThumbnail.PNG">
                                 <div class="picBanner">
-                                    <p>Sample Text</p>
+                                    <p>Island Word Guess</p>
                                 </div>
                             </a>
-                            <a href="" class="box">
-                                <img class="portPic" src="assets/images/200x200(1).jpg">
+                            <a href="https://bhoff5.github.io/unit-4-game/" class="box">
+                                <img class="portPic" src="assets/images/crystalCollectorThumbnail.PNG">
                                 <div class="picBanner">
-                                    <p>Sample Text</p>
+                                    <p>Crystal Collector Game</p>
                                 </div>
                             </a>
                             <a href="" class="box">
